# microcosm

./: .coveragerc  .gitignore  .pylintrc  CODE-OF-CONDUCT.md  CONTRIBUTING.md  README.md  board.py  calculator.py  catalogue.py  dev_requirements.txt  factions  game.py  game_controller.py  game_input_handler.py  game_server.py  game_state.py  menu.py  microcosm.py  models.py  movemaker.py  music_player.py  overlay.py  overlay_display.py  pyproject.toml  requirements.txt  resource_loader.py  save_encoder.py  stats  windows-nuitka-package.config.yml
.github/workflows/: bundle.yml  ci.yml  publish.yml
game_management/: game_controller.py  game_input_handler.py  game_state.py
resources/: README.md  background1.pyxres  background2.pyxres  music.pyxres  quads.pyxres  sprites.pyxres  title_text.pyxres
saves/: README.md
saving/: game_save_manager.py
source/: game.py
source/display/: board.py  dialogue.py  display_utils.py  menu.py  menu_display.py  overlay.py  overlay_display.py
source/foundation/: achievements.py  catalogue.py  models.py
source/game_management/: game_controller.py  game_input_handler.py  game_state.py  movemaker.py
source/networking/: client.py  event_listener.py  events.py
source/resources/: README.md  achievements.pyxres  background1.pyxres  background2.pyxres  introbg1.pyxres  quads.pyxres  sprites.pyxres
source/saves/: README.md
source/saving/: game_save_manager.py  save_encoder.py  save_migrator.py
source/tests/: test_achievements.py  test_board.py  test_calculator.py  test_catalogue.py  test_client.py  test_converter.py  test_event_listener.py  test_game_input_handler.py  test_game_save_manager.py  test_game_state.py  test_menu.py  test_minifier.py  test_models.py  test_movemaker.py  test_music_player.py  test_overlay.py  test_save_encoder.py  test_save_migrator.py
source/tests/resources/: invalid-save.json  save-test.json  test-save.json
source/util/: calculator.py  converter.py  minifier.py  music_player.py
